# C3

./: .gitignore  .gitmodules  README  app-debug.apk  新建文本文档.txt
C3Server/: C3Server.pro  C3Server.pro.user.9bac7ae  basic_surf_objs.h  customdebug.h  dataprepro.h  filereceiver.cpp  filereceiver.h  filesender.cpp  filesender.h  main.cpp  manage.cpp  manage.h  resampling.h  respond.cpp  respond.h  server.cpp  server.h  socket.cpp  socket.h  threadpool.cpp  threadpool.h
C3ServerTest/: C3ServerTest.pro  main.cpp  socket.cpp  socket.h
Hi5/: Hi5.pro  filelistwidget.cpp  filelistwidget.h  hi5.cpp  hi5.h  inlogWidget.cpp  inlogWidget.h  main.cpp  resource.qrc  tcpsocket.cpp  tcpsocket.h  unlogwidget.cpp  unlogwidget.h
MyApplicationVolume/: .gitignore  Test Results - DemoTest().html  Test Results - HuaweiTest().html  build.gradle  gradle.properties  script.gradle  settings.gradle
MyApplicationVolume/module_yolo/src/main/jni/: CMakeLists.txt  ndkcamera.cpp  yolo.cpp  yolo.h  yolov8ncnn.cpp
MyApplicationVolume/module_yolo/src/main/jni/arm64-v8a/include/ncnn/: platform.h
MyApplicationVolume/module_yolo/src/main/jni/armeabi-v7a/include/ncnn/: platform.h
MyApplicationVolume/module_yolo/src/main/jni/x86_64/include/ncnn/: platform.h
MyTCPer/: settings.gradle
ProjectScore/: ProjectScore.sln
Server_C3/: pom.xml
randomForest/: DecisionTree_0.dt  DecisionTree_1.dt  DecisionTree_10.dt  DecisionTree_11.dt  DecisionTree_12.dt  DecisionTree_13.dt  DecisionTree_14.dt  DecisionTree_15.dt  DecisionTree_16.dt  DecisionTree_17.dt  DecisionTree_18.dt  DecisionTree_19.dt  (+89 more)
(+1746 files in other folders)
